<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuturtle_control</name>
  <version>0.0.0</version>
  <description>This package connects commands and sensor data from a turtlebot.</description>
  <maintainer email="MiguelP@u.northwestern.edu">Miguel Pegues</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros2launch</depend>
  <depend>nuturtle_description</depend>
  <depend>nuturtlebot_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nuturtle_control_interfaces</depend>

  <depend>turtlelib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
